syntax = "proto3";

package musicclub.permissions;

// Aggregated permissions for a user session.
message PermissionSet {
  JoinPermissions join = 1;
  SongPermissions songs = 2;
  EventPermissions events = 3;
}

// Rights around participation in roles.
message JoinPermissions {
  bool edit_own_participation = 1;
  bool edit_any_participation = 2;
}

// Rights around songs.
message SongPermissions {
  bool edit_own_songs = 1;
  bool edit_any_songs = 2;
}

// Rights around events and tracklists.
message EventPermissions {
  bool edit_events = 1;
  bool edit_tracklists = 2;
}
